# Metis

./: BUILD.txt  CMakeLists.txt  Install.txt  Makefile
GKlib/: GKlibSystem.cmake  gk_arch.h  gk_macros.h  string.c
include/: CMakeLists.txt  metis.h.in
libmetis/: CMakeLists.txt
programs/: CMakeLists.txt
